# Cpp-Projects

Basics/Byte size of variable/: a.out  main.cpp
Basics/Hello world/: a.out
Basics/Print number entered by user/: a.out  main.cpp
Basics/Roots of quadratic equations/: a.out  main.cpp
Basics/Sum of two numbers/: a.out  main.cpp
CMake projects/My_test_project/: CMakeCache.txt  CMakeLists.txt  Makefile  Notes.txt  cmake_install.cmake  main.cpp
CMake projects/My_test_project/my_lib/: myfunctions.cpp  myfunctions.h
Numerical methods/Interpolation/: a.out  lin_spline_data.txt  main.cpp  plot.py  tabulated_data.txt  test.txt
Object Oriented Programming/Basic class/: a.out  main.cpp
Object Oriented Programming/Basic class 2/: a.out  main.cpp
Sudoku/: CMakeLists.txt  NOTES.txt  Readme.md  main.cpp
Sudoku/src/: a.out  main.cpp
openMP_Test/src/: Makefile  Makefile.save  main  main.cpp
